--- a/src/pages/registro.astro
+++ b/src/pages/registro.astro
@@ -7,19 +7,23 @@ import Layout from '../layouts/Layout-registro.astro';
         <img id="estrellas" src="Imagenes/Registro/Estrellas.png">
         <img id="fondo" src="Imagenes/Registro/Fondo.svg">
         <div id="blur"></div>
-        <a id="cerrar" href="index.astro"><img id="x" src="Imagenes/Registro/x.svg"></a>
+        <a id="cerrar" href="/index.html"><img id="x" src="Imagenes/Registro/x.svg"></a>
         <header>
-            <h1>Bienvenido a Astrae</h1>
-            <p id="subtexto-principal">Gracias por confiar en Astrae. Para comenzar a disfrutar<br> de todas nuestras funciones, configuremos su cuenta.
-            </p>
+            <h1>Entra en Astrae</h1>
+            <p id="subtexto-principal">Abre un mundo de grandes oportunidades entrando con <br>tu email o iniciando sesión con tu cuenta de Google</p>
         </header>
-        <form>
-            <input type="email" placeholder="Introduce email" required>
-            <input type="text" placeholder="Contraseña" required hidden> 
-            <button type="submit"><img id="flecha" src="Imagenes/Registro/Flecha.svg"></button>
+        <form id="form">
+            <input id="email" type="email" placeholder="Introduce email" required>
+            <div id="password-container" style="display: none;">
+                <input id="password" type="password" placeholder="Contraseña" required> 
+                <span id="toggle-password" style="cursor: pointer;">
+                    <img id="eye-icon" src="Imagenes/Registro/Ojo cerrado.png" alt="Mostrar/Ocultar Contraseña">
+                </span>
+            </div>
+            <button id="submit-btn" type="button"><img id="flecha" src="Imagenes/Registro/Flecha.svg"></button>
         </form>
-        <button id="iniciar"><img id="google" src="Imagenes/Registro/Inicia sesion con google.svg"></button>
-        <p class="texto-abajo"><span id="regular">Al registrarse, está aceptando nuestros</span><a href="#" id="texto-abajo">Terminos y Servicios </a></p>
+        <button id="iniciar" type="button"><img id="google" src="Imagenes/Registro/Inicia sesion con google.svg"></button>
+        <p class="texto-abajo"><span id="regular">¿No tienes cuenta todavía?</span><a href="/registro" id="texto-abajo">Regístrate</a></p>
     </body>
 </Layout>
 
@@ -46,8 +50,13 @@ import Layout from '../layouts/Layout-registro.astro';
         width: 100%;
         height: 100%;
         z-index: -1;
-        background-color: #0909127c;
-        backdrop-filter: blur(20px);
+        background-color: #0909129c;
+        backdrop-filter: blur(10px);
+        transition: z-index 0.1s ease;
+    }
+
+    div#blur.blur-active {
+        z-index: 3; /* Mantén este valor bajo el input (z-index 4) */
     }
 
     a#cerrar{
@@ -76,10 +85,9 @@ import Layout from '../layouts/Layout-registro.astro';
         font-weight: 400;
         line-height: 20px;
         text-align: center;
-        color: #7E7E98;
+        color: #9292ad;
         margin-top: -12px;
         margin-bottom: 22px;
-        z-index: 4;
     }
 
     form{
@@ -91,7 +99,6 @@ import Layout from '../layouts/Layout-registro.astro';
         box-shadow: rgba(0, 0, 0, 0.08) 1px 1px 1px inset;
         backdrop-filter: blur(2px);
         border-radius: 92px;
-        line-height: 19px;
         padding-left: 21px;
         display: flex;
         cursor: text;
@@ -100,20 +107,42 @@ import Layout from '../layouts/Layout-registro.astro';
     }
 
     input{
-        line-height: 19px;
-        width: 100%;
+        width: 89%;
         padding: 0px 8px 1px 0px;
         color: rgb(255, 255, 255);
         transition: color 0.3s;
+        margin-top: 2px;
         border: none;
         background: transparent;
         color: rgb(255, 255, 255);
         caret-color: rgb(71, 159, 250);
-        max-width: 100%;
+    }
+
+    input#password{
+        width: 78%;
     }
 
     input:focus {
         outline: none;
+    }
+
+    div#password-container {
+        position: relative;
+        display: flex;
+        width: inherit;
+        align-items: center;
+    }
+
+    span#toggle-password {
+        position: absolute;
+        right: 63px;
+        top: 14px;
+    }
+
+    img#eye-icon {
+        position: absolute;
+        width: 16px;
+        height: 16px;
     }
 
     button{
@@ -125,7 +154,6 @@ import Layout from '../layouts/Layout-registro.astro';
         width: 25px;
         height: 25px;
         right: 9px;
-        z-index: 5;
         border-radius: 50px;
         cursor: pointer;
     }
@@ -155,6 +183,7 @@ import Layout from '../layouts/Layout-registro.astro';
         text-align: center;
         position: relative;
         font-size: 13px;
+        z-index: 4;
     }
 
     span#regular{
