--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,8 +15,8 @@ import Layout from '../layouts/Layout.astro';
         </header>
 
         <div class="botones">
-            <a href="/src/pages/inicio-sesion"><button id="inicia-sesion">Inicia Sesión</button></a>
-            <a href="/src/pages/registro"><button id="registrate">Regístrate</button></a>
+            <a href="/inicio-sesion"><button id="inicia-sesion">Inicia Sesión</button></a>
+            <a href="/registro"><button id="registrate">Regístrate</button></a>
         </div>
 
         <div>
@@ -432,18 +432,18 @@ import Layout from '../layouts/Layout.astro';
             <div class="footer-column" id="columna-medio">
                 <h4>Menú</h4>
               <ul>
-                <li><a href="index.astro">Inicio</a></li>
-                <li><a href="funcionalidades.astro">Funcionalidades</a></li>
-                <li><a href="como-funciona.astro">Cómo Funciona</a></li>
-                <li><a href="blog.astro">Blog</a></li>
+                <li><a href="/index.html">Inicio</a></li>
+                <li><a href="/funcionalidades">Funcionalidades</a></li>
+                <li><a href="/como-funciona">Cómo Funciona</a></li>
+                <li><a href="/blog">Blog</a></li>
               </ul>
             </div>
             <div class="footer-column">
                 <h4>Ayuda y Soporte</h4>
               <ul>
-                <li><a href="centro-de-ayuda.astro">Centro de Ayuda</a></li>
-                <li><a href="terminos.astro">Términos y Condiciones</a></li>
-                <li><a href="privacidad.astro">Política de Privacidad</a></li>
+                <li><a href="/centro-de-ayuda">Centro de Ayuda</a></li>
+                <li><a href="/terminos">Términos y Condiciones</a></li>
+                <li><a href="/privacidad">Política de Privacidad</a></li>
               </ul>
             </div>
             <div class="footer-column-social">
@@ -1888,6 +1888,11 @@ footer{
     color: #e9e9e9;
     min-width: 100%;
     max-width: 100%;
+  }
+
+  .footer-contact input,
+  .footer-contact textarea:focus{
+    outline: none;
   }
 
   .footer-contact textarea{
