--- a/src/pages/inicio-sesion.astro
+++ b/src/pages/inicio-sesion.astro
@@ -7,18 +7,25 @@ import Layout from '../layouts/Layout-registro.astro';
         <img id="estrellas" src="Imagenes/Registro/Estrellas.png">
         <img id="fondo" src="Imagenes/Registro/Fondo.svg">
         <div id="blur"></div>
-        <a id="cerrar" href="index.astro"><img id="x" src="Imagenes/Registro/x.svg"></a>
+        <a id="cerrar" href="/index.html"><img id="x" src="Imagenes/Registro/x.svg"></a>
         <header>
             <h1>Entra en Astrae</h1>
             <p id="subtexto-principal">Abre un mundo de grandes oportunidades entrando con <br>tu email o iniciando sesión con tu cuenta de Google</p>
         </header>
-        <form>
-            <input type="email" placeholder="Introduce email" required>
-            <input type="text" placeholder="Contraseña" required hidden> 
-            <button type="submit"><img id="flecha" src="Imagenes/Registro/Flecha.svg"></button>
+        <form id="form">
+            <div id="email-container">
+                <input id="email" type="email" placeholder="Introduce email" required>
+            </div>
+            <div id="password-container" style="display: none;">
+                <input id="password" type="password" placeholder="Contraseña" required> 
+                <span id="toggle-password" style="cursor: pointer;">
+                    <img id="eye-icon" src="Imagenes/Registro/Ojo cerrado.png" alt="Mostrar/Ocultar Contraseña">
+                </span>
+            </div>            
+            <button id="submit-btn" type="button"><img id="flecha" src="Imagenes/Registro/Flecha.svg"></button>
         </form>
-        <button id="iniciar" type="submit"><img id="google" src="Imagenes/Registro/Inicia sesion con google.svg"></button>
-        <p class="texto-abajo"><span id="regular">¿No tienes cuenta todavía?</span><a href="registro.astro" id="texto-abajo">Regístrate</a></p>
+        <button id="iniciar" type="button"><img id="google" src="Imagenes/Registro/Inicia sesion con google.svg"></button>
+        <p class="texto-abajo"><span id="regular">¿No tienes cuenta todavía?</span><a href="/registro" id="texto-abajo">Regístrate</a></p>
     </body>
 </Layout>
 
@@ -45,8 +52,13 @@ import Layout from '../layouts/Layout-registro.astro';
         width: 100%;
         height: 100%;
         z-index: -1;
-        background-color: #0909127c;
-        backdrop-filter: blur(20px);
+        background-color: #0909129c;
+        backdrop-filter: blur(10px);
+        transition: z-index 0.1s ease;
+    }
+
+    div#blur.blur-active {
+        z-index: 3; /* Mantén este valor bajo el input (z-index 4) */
     }
 
     a#cerrar{
@@ -78,7 +90,6 @@ import Layout from '../layouts/Layout-registro.astro';
         color: #7E7E98;
         margin-top: -12px;
         margin-bottom: 22px;
-        z-index: 4;
     }
 
     form{
@@ -90,7 +101,6 @@ import Layout from '../layouts/Layout-registro.astro';
         box-shadow: rgba(0, 0, 0, 0.08) 1px 1px 1px inset;
         backdrop-filter: blur(2px);
         border-radius: 92px;
-        line-height: 19px;
         padding-left: 21px;
         display: flex;
         cursor: text;
@@ -99,22 +109,43 @@ import Layout from '../layouts/Layout-registro.astro';
     }
 
     input{
-        line-height: 19px;
-        width: 100%;
+        width: 89%;
         padding: 0px 8px 1px 0px;
         color: rgb(255, 255, 255);
         transition: color 0.3s;
+        margin-top: 2px;
         border: none;
         background: transparent;
         color: rgb(255, 255, 255);
         caret-color: rgb(71, 159, 250);
-        max-width: 100%;
+    }
+
+    input#password{
+        width: 78%;
     }
 
     input:focus {
         outline: none;
     }
 
+    div#password-container, div#email-container {
+        position: relative;
+        display: flex;
+        width: inherit;
+        align-items: center;
+    }
+
+    span#toggle-password {
+        position: absolute;
+        right: 63px;
+        top: 14px;
+    }
+
+    img#eye-icon {
+        position: absolute;
+        width: 16px;
+        height: 16px;
+    }
     button{
         background-color: transparent;
         border: none;
@@ -124,7 +155,6 @@ import Layout from '../layouts/Layout-registro.astro';
         width: 25px;
         height: 25px;
         right: 9px;
-        z-index: 5;
         border-radius: 50px;
         cursor: pointer;
     }
@@ -154,6 +184,7 @@ import Layout from '../layouts/Layout-registro.astro';
         text-align: center;
         position: relative;
         font-size: 13px;
+        z-index: 4;
     }
 
     span#regular{
@@ -178,17 +209,5 @@ import Layout from '../layouts/Layout-registro.astro';
     }
 </style>
 
-<script>
-    const emailInput = document.getElementById('email');
-    const blurDiv = document.getElementById('blur');
-
-    emailInput.addEventListener('input', () => {
-        if (emailInput.value !== '') {
-            blurDiv.classList.add('blur-active');
-        } else {
-            blurDiv.classList.remove('blur-active');
-        }
-    });
-</script>
 
   
