--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -423,7 +423,6 @@ import Layout from '../layouts/Layout.astro';
                     <p class="subtexto" id="eventos-subtexto">Recibe notificaciones antes de las fechas<br> claves sobre las starutps de tu portfolio</p>
                 </section>
             </section>
-                  
         </div>
     </div>
     <footer>
@@ -435,7 +434,7 @@ import Layout from '../layouts/Layout.astro';
                 <li><a href="/index.html">Inicio</a></li>
                 <li><a href="/funcionalidades">Funcionalidades</a></li>
                 <li><a href="/como-funciona">Cómo Funciona</a></li>
-                <li><a href="/blog">Blog</a></li>
+                <li><a href="discord.com">Comunidad</a></li>
               </ul>
             </div>
             <div class="footer-column">
