--- a/src/pages/registro.astro
+++ b/src/pages/registro.astro
@@ -12,7 +12,7 @@ import Layout from '../layouts/Layout-registro.astro';
             <h1>Bienvenido a Astrae</h1>
             <p id="subtexto-principal">Abre un mundo de grandes oportunidades entrando con <br>tu email o iniciando sesión con tu cuenta de Google</p>
         </header>
-        <form id="form">
+        <form id="registerForm">
             <input id="email" type="email" placeholder="Introduce email" required>
             <div id="password-container" style="display: none;">
                 <input id="password" type="password" placeholder="Contraseña" required> 
