--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -531,7 +531,7 @@ button#registrate{
     margin-left: 15px;
     border-radius: 5px;
     position: relative;
-    border: 0px;
+    border: none;
 }
 
 @property --angle {
