--- a/src/layouts/Layout-registro.astro
+++ b/src/layouts/Layout-registro.astro
@@ -37,7 +37,8 @@ const { title } = Astro.props;
     }
 </style>
 
-<script>
+<script src="https://cdn.lordicon.com/ritcuqlt.js">
+    
     const emailInput = document.getElementById('email');
     const passwordInput = document.getElementById('password');
     const submitBtn = document.getElementById('submit-btn');
